--- a/css/responsive.css
+++ b/css/responsive.css
@@ -67,6 +67,10 @@
       width: 150px;
       margin-right: 50px;
     }
+
+    a:active, a:hover {
+      color: #8cc600;
+    }
 }
 
 @media screen and (min-width: 940px) {
